--- a/lesson4/lesson4_1.ipynb
+++ b/lesson4/lesson4_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -11,8 +11,9 @@
      "text": [
       "values1的平均值是7\n",
       "values1的標準差是5.94418483337567\n",
-      "values1的平均值是7\n",
-      "values1的標準差是1.8257418583505538\n"
+      "========================\n",
+      "values2的平均值是7\n",
+      "values2的標準差是1.8257418583505538\n"
      ]
     }
    ],
@@ -28,8 +29,9 @@
     "\n",
     "print(f\"values1的平均值是{average1}\")\n",
     "print(f\"values1的標準差是{std1}\")\n",
-    "print(f\"values1的平均值是{average2}\")\n",
-    "print(f\"values1的標準差是{std2}\")      \n"
+    "print(\"========================\")\n",
+    "print(f\"values2的平均值是{average2}\")\n",
+    "print(f\"values2的標準差是{std2}\")      \n"
    ]
   },
   {
