--- a/lesson4/lesson4_1.ipynb
+++ b/lesson4/lesson4_1.ipynb
@@ -36,10 +36,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 10\n",
+    "n = n + 5\n",
+    "print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 10\n",
+    "n *= 5 #複合指定運算子\n",
+    "print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0+10.0+15.0=30.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#請以(複合指令運算子)設計程式,請使用者輸入三個任意數,程式會顯示3數相加的總和(float)\n",
+    "total = 0 \n",
+    "value1 = float(input(\"請輸入第一個數:\"))\n",
+    "total += value1\n",
+    "\n",
+    "value2 = float(input(\"請輸入第二個數:\"))\n",
+    "total += value2\n",
+    "\n",
+    "value3 = float(input(\"請輸入第三個數:\"))\n",
+    "total += value3\n",
+    "\n",
+    "print(f\"{value1}+{value2}+{value3}={round(total,ndigits=2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value1 + value2 + value3 = total\n",
+      "5.0 + 10.0 + 15.0 = 30.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#字串\n",
+    "print(\"value1 + value2 + value3 = total\")\n",
+    "\n",
+    "#字串整合變數成為一個新的字串\n",
+    "#字串插補\n",
+    "print(f\"{value1} + {value2} + {value3} = {total}\")\n"
+   ]
   }
  ],
  "metadata": {
