--- a/lesson4/lesson4_1.ipynb
+++ b/lesson4/lesson4_1.ipynb
@@ -19,8 +19,8 @@
    ],
    "source": [
     "import statistics\n",
-    "values1 = (0, 5, 9, 14)\n",
-    "values2 = (5, 6, 8, 9)\n",
+    "values1 = [0, 5, 9, 14]\n",
+    "values2 = [5, 6, 8, 9]\n",
     "\n",
     "average1 = statistics.mean(values1)\n",
     "average2 = statistics.mean(values2)\n",
