--- a/lesson4/lesson4_2.ipynb
+++ b/lesson4/lesson4_2.ipynb
@@ -131,6 +131,40 @@
     "\n",
     "print(\"應用程式結束\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "您的姓名是:Grace\n",
+      "您的BMI值是:22.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#BMI值\n",
+    "\n",
+    "name = input(\"請輸入您的姓名\") \n",
+    "height = float(input(\"請輸入您的身高(cm)\"))\n",
+    "weight = float(input(\"請輸入您的體重(kg)\"))\n",
+    "\n",
+    "BMI = float(weight/(height/100)**2)\n",
+    "\n",
+    "print(f\"您的姓名是:{name}\")\n",
+    "print(f\"您的BMI值是:{round(BMI,ndigits=1)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
