--- a/lesson5/leeson5_0.ipynb
+++ b/lesson5/leeson5_0.ipynb
@@ -22,6 +22,89 @@
     "print(f\"您的姓名是:{name}\")\n",
     "print(f\"您的BMI值是:{round(BMI,ndigits=2)}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "學生分數是:294\n"
+     ]
+    }
+   ],
+   "source": [
+    "#學生的總分為300分\n",
+    "#有些學生可以加分5%\n",
+    "\n",
+    "scores = int(input(\"請輸入學生分數(最高300分):\"))\n",
+    "is_add = input(\"學生是否符合加分條件?(y,n)\")\n",
+    "if is_add == \"y\":\n",
+    "    scores *= 1.05\n",
+    "\n",
+    "print(f\"學生分數是:{round(scores,ndigits=0)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "學生分數是:300\n"
+     ]
+    }
+   ],
+   "source": [
+    "#學生的總分為300分\n",
+    "#有些學生可以加分5%\n",
+    "#如果加分超過300分,就以300分計算\n",
+    "\n",
+    "scores = int(input(\"請輸入學生分數(最高300分):\"))\n",
+    "is_add = input(\"學生是否符合加分條件?(y,n)\")\n",
+    "if is_add == \"y\":\n",
+    "    scores *= 1.05\n",
+    "    if scores > 300:\n",
+    "        scores = 300     \n",
+    "\n",
+    "print(f\"學生分數是:{round(scores,ndigits=0)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "格式錯誤\n",
+      "應用程式結束\n"
+     ]
+    }
+   ],
+   "source": [
+    "try: \n",
+    "    money = int(input(\"請輸入金額:\"))\n",
+    "    print(money)\n",
+    "except ValueError:\n",
+    "    print(\"格式錯誤\")\n",
+    "print(\"應用程式結束\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
