--- a/lesson5/leeson5_0.ipynb
+++ b/lesson5/leeson5_0.ipynb
@@ -164,10 +164,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "學生分數是:288.0\n",
+      "應用程式結束\n"
+     ]
+    }
+   ],
+   "source": [
+    "#學生的總分為300分\n",
+    "#有些學生可以加分5%\n",
+    "#如果加分超過300分,就以300分計算\n",
+    "#raise Exception()\n",
+    "try:\n",
+    "    scores = int(input(\"請輸入學生分數(最高300分):\"))\n",
+    "    if scores > 300 or scores < 0: \n",
+    "        raise Exception(\"輸入不在範圍內\")\n",
+    "    is_add = input(\"學生是否符合加分條件?(y,n)\")\n",
+    "    if is_add == \"y\":\n",
+    "        scores *= 1.05\n",
+    "        if scores > 300:\n",
+    "            scores = 300     \n",
+    "\n",
+    "    print(f\"學生分數是:{round(scores,ndigits=0)}\")\n",
+    "    \n",
+    "\n",
+    "except ValueError:\n",
+    "    print(\"格式錯誤\")\n",
+    "except Exception as error:\n",
+    "    print(error)\n",
+    "\n",
+    "print(\"應用程式結束\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pyinputplus as pyip"
+   ]
   }
  ],
  "metadata": {
