--- a/lesson5/leeson5_0.ipynb
+++ b/lesson5/leeson5_0.ipynb
@@ -204,11 +204,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入整數:Number must be at minimum 0.\n",
+      "請輸入整數:Number must be at maximum 300.\n",
+      "請輸入整數:'123a' is not an integer.\n",
+      "請輸入整數:278\n"
+     ]
+    }
+   ],
    "source": [
-    "import pyinputplus as pyip"
+    "import pyinputplus as pypi\n",
+    "\n",
+    "value = pypi.inputInt(\"請輸入整數:\", min=0, max=300)\n",
+    "print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入學生分數(最高300分):199\n",
+      "學生分數是:209.0\n",
+      "應用程式結束\n"
+     ]
+    }
+   ],
+   "source": [
+    "#學生的總分為300\n",
+    "#有些學生可以加分5%\n",
+    "#如果加分超過300,就以300分為準\n",
+    "#raise Exception()\n",
+    "\n",
+    "scores = pypi.inputInt(\"請輸入學生分數(最高300分):\",min=0,max=300)\n",
+    "print(scores)\n",
+    "is_add = input(\"學生是否符合加分條件?(y,n)\")\n",
+    "if is_add == \"y\":\n",
+    "    scores *= 1.05\n",
+    "    if scores > 300:\n",
+    "        scores = 300\n",
+    "\n",
+    "print(f\"學生分數是:{round(scores,ndigits=0)}\")\n",
+    "print(\"應用程式結束\")"
    ]
   }
  ],
