--- a/lesson4/lesson4_2.ipynb
+++ b/lesson4/lesson4_2.ipynb
@@ -161,16 +161,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "您的姓名是:g\n",
-      "您的BMI值是:39.6\n",
-      "您的BMI值屬於:重度肥胖\n"
+      "您的姓名是:test\n",
+      "您的BMI值是:20.1\n",
+      "您的體重:正常\n"
      ]
     }
    ],
@@ -184,7 +184,7 @@
     "BMI = float(weight/(height/100)**2)\n",
     "if BMI < 18.5: \n",
     "    value = \"過輕\"\n",
-    "elif BMI < 24:\n",
+    "elif BMI > 18.5 and BMI < 24:\n",
     "    value = \"正常\"\n",
     "elif BMI < 27:\n",
     "    value = \"過重\"\n",
@@ -197,7 +197,7 @@
     "\n",
     "print(f\"您的姓名是:{name}\")\n",
     "print(f\"您的BMI值是:{round(BMI,ndigits=1)}\")\n",
-    "print(f\"您的BMI值屬於:{value}\")"
+    "print(f\"您的體重:{value}\")"
    ]
   },
   {
