--- a/lesson5/lesson5_0.ipynb
+++ b/lesson5/lesson5_0.ipynb
@@ -257,6 +257,15 @@
     "print(f\"學生分數是:{round(scores,ndigits=0)}\")\n",
     "print(\"應用程式結束\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyinputplus as pyip\n"
+   ]
   }
  ],
  "metadata": {
