--- a/lesson6/lesson6_2.ipynb
+++ b/lesson6/lesson6_2.ipynb
@@ -176,6 +176,47 @@
     "        print(f\"{i:<2d}*{j:2d} ={i*j:2d}\",end='  ')\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character '“' (U+201C) (4079167276.py, line 11)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[6], line 11\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(f\"{n}\"的因數有“, end= \"\")\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character '“' (U+201C)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#公因數\n",
+    "\n",
+    "#輸入 請輸入整數,求所有公因數:10\n",
+    "#輸出 因數有:1,2,5,10\n",
+    "\n",
+    "\n",
+    "import pyinputplus as pypi\n",
+    "\n",
+    "try\n",
+    "    n = pypi.inputInt(f\"請輸入整數求公因數：\", min=0\n",
+    "    print(f\"{n}\"的因數有“, end= \"\")\n",
+    "    for i in range(1,10):\n",
+    "    if result%i == 0:\n",
+    "        result = int(result/i)  \n",
+    "            print(result)\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
