--- a/lesson7/lesson7_2.ipynb
+++ b/lesson7/lesson7_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -11,8 +11,15 @@
      "text": [
       "==========猜數字遊戲========\n",
       "\n",
-      "猜數字範圍1~10:Number must be at maximum 10.\n",
-      "猜數字範圍1~10:5\n",
+      "猜數字範圍1~10:4\n",
+      "再大一點\n",
+      "您已經猜了1次\n",
+      "猜數字範圍5~10:6\n",
+      "再大一點\n",
+      "您已經猜了2次\n",
+      "猜數字範圍7~10:7\n",
+      "bingo, 答案是:7\n",
+      "你猜了3次\n",
       "遊戲結束\n"
      ]
     }
@@ -23,13 +30,25 @@
     "\n",
     "min:int = 1\n",
     "max:int = 10\n",
+    "count:int = 0\n",
     "\n",
     "target:int = random.randint(min,max)\n",
     "print(\"==========猜數字遊戲========\\n\")\n",
     "while(True):\n",
     "    keyin:int = pypi.inputInt(f\"猜數字範圍{min}~{max}:\",min=min,max=max)\n",
     "    print(keyin)\n",
-    "    break\n",
+    "    count += 1\n",
+    "    if keyin == target:\n",
+    "        print(f\"bingo, 答案是:{keyin}\")\n",
+    "        print(f\"你猜了{count}次\")\n",
+    "        break\n",
+    "    elif(keyin > target):\n",
+    "        print(f\"再小一點\")\n",
+    "        max = keyin - 1 \n",
+    "    elif(keyin < target):\n",
+    "        print(f\"再大一點\")\n",
+    "        min = keyin + 1\n",
+    "    print(f\"您已經猜了{count}次\")\n",
     "\n",
     "print(\"遊戲結束\")"
    ]
