--- a/lesson4/lesson4_2.ipynb
+++ b/lesson4/lesson4_2.ipynb
@@ -205,7 +205,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#BMI值\n",
+    "\n",
+    "name = input(\"請輸入您的姓名\") \n",
+    "height = float(input(\"請輸入您的身高(cm)\"))\n",
+    "weight = float(input(\"請輸入您的體重(kg)\"))\n",
+    "\n",
+    "\n",
+    "\n",
+    "BMI = float(weight/(height/100)**2)\n",
+    "if BMI < 18.5: \n",
+    "    value = \"過輕\"\n",
+    "elif BMI > 18.5 and BMI < 24:\n",
+    "    value = \"正常\"\n",
+    "elif BMI < 27:\n",
+    "    value = \"過重\"\n",
+    "elif BMI < 30:\n",
+    "    value = \"輕度肥胖\"\n",
+    "elif BMI < 35:\n",
+    "    value = \"中度肥胖\"\n",
+    "else:\n",
+    "    value = \"重度肥胖\"\n",
+    "\n",
+    "print(f\"您的姓名是:{name}\")\n",
+    "print(f\"您的BMI值是:{round(BMI,ndigits=1)}\")\n",
+    "print(f\"您的體重:{value}\")"
+   ]
   }
  ],
  "metadata": {
