--- a/lesson4/lesson4_2.ipynb
+++ b/lesson4/lesson4_2.ipynb
@@ -202,9 +202,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expected ':' (3361738888.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 7\u001b[0;36m\u001b[0m\n\u001b[0;31m    def cal_bmi(height:int,weight:int) -> float\u001b[0m\n\u001b[0m                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
+     ]
+    }
+   ],
    "source": [
     "#BMI值\n",
     "\n",
@@ -212,9 +221,10 @@
     "height = float(input(\"請輸入您的身高(cm)\"))\n",
     "weight = float(input(\"請輸入您的體重(kg)\"))\n",
     "\n",
-    "\n",
-    "\n",
+    "def cal_bmi(height:int,weight:int) -> float\n",
     "BMI = float(weight/(height/100)**2)\n",
+    "\n",
+    "def get_status(bmi:float)->str\n",
     "if BMI < 18.5: \n",
     "    value = \"過輕\"\n",
     "elif BMI > 18.5 and BMI < 24:\n",
