--- a/lesson4/lesson4_2.ipynb
+++ b/lesson4/lesson4_2.ipynb
@@ -206,11 +206,11 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "expected ':' (3361738888.py, line 7)",
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after function definition on line 7 (478637776.py, line 8)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 7\u001b[0;36m\u001b[0m\n\u001b[0;31m    def cal_bmi(height:int,weight:int) -> float\u001b[0m\n\u001b[0m                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 8\u001b[0;36m\u001b[0m\n\u001b[0;31m    BMI = float(weight/(height/100)**2)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after function definition on line 7\n"
      ]
     }
    ],
@@ -221,7 +221,7 @@
     "height = float(input(\"請輸入您的身高(cm)\"))\n",
     "weight = float(input(\"請輸入您的體重(kg)\"))\n",
     "\n",
-    "def cal_bmi(height:int,weight:int) -> float\n",
+    "def cal_bmi(height:int,weight:int) -> float:\n",
     "BMI = float(weight/(height/100)**2)\n",
     "\n",
     "def get_status(bmi:float)->str\n",
