--- a/lesson4/lesson4_2.ipynb
+++ b/lesson4/lesson4_2.ipynb
@@ -202,45 +202,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block after function definition on line 7 (478637776.py, line 8)",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "您的姓名是:test\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'BMI' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 8\u001b[0;36m\u001b[0m\n\u001b[0;31m    BMI = float(weight/(height/100)**2)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after function definition on line 7\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 30\u001b[0m\n\u001b[1;32m     28\u001b[0m bmi:\u001b[38;5;28mfloat\u001b[39m\u001b[38;5;241m=\u001b[39mcal_bmi(height,weight)\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m您的姓名是:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 30\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m您的BMI值是:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mround\u001b[39m(\u001b[43mBMI\u001b[49m,ndigits\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     31\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m您的體重:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvalue\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'BMI' is not defined"
      ]
     }
    ],
    "source": [
     "#BMI值\n",
     "\n",
+    "import pyinputplus as pypi\n",
+    "\n",
+    "def cal_bmi(height:int,weight:int) -> float:\n",
+    "    BMI = float(weight/(height/100)**2)\n",
+    "    return BMI\n",
+    "\n",
+    "def get_status(bmi:float)->str:\n",
+    "    if BMI < 18.5: \n",
+    "        value = \"過輕\"\n",
+    "    elif BMI > 18.5 and BMI < 24:\n",
+    "        value = \"正常\"\n",
+    "    elif BMI < 27:\n",
+    "        value = \"過重\"\n",
+    "    elif BMI < 30:\n",
+    "        value = \"輕度肥胖\"\n",
+    "    elif BMI < 35:\n",
+    "        value = \"中度肥胖\"\n",
+    "    else:\n",
+    "        value = \"重度肥胖\"\n",
+    "    return value\n",
+    "\n",
+    "\n",
     "name = input(\"請輸入您的姓名\") \n",
     "height = float(input(\"請輸入您的身高(cm)\"))\n",
     "weight = float(input(\"請輸入您的體重(kg)\"))\n",
     "\n",
-    "def cal_bmi(height:int,weight:int) -> float:\n",
-    "BMI = float(weight/(height/100)**2)\n",
-    "\n",
-    "def get_status(bmi:float)->str\n",
-    "if BMI < 18.5: \n",
-    "    value = \"過輕\"\n",
-    "elif BMI > 18.5 and BMI < 24:\n",
-    "    value = \"正常\"\n",
-    "elif BMI < 27:\n",
-    "    value = \"過重\"\n",
-    "elif BMI < 30:\n",
-    "    value = \"輕度肥胖\"\n",
-    "elif BMI < 35:\n",
-    "    value = \"中度肥胖\"\n",
-    "else:\n",
-    "    value = \"重度肥胖\"\n",
-    "\n",
+    "bmi:float=cal_bmi(height,weight)\n",
     "print(f\"您的姓名是:{name}\")\n",
     "print(f\"您的BMI值是:{round(BMI,ndigits=1)}\")\n",
     "print(f\"您的體重:{value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'BMI' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 39\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m     34\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;124;03m    print(\"我是被python執行的主程式\")\u001b[39;00m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;124;03m    print(__name__)\u001b[39;00m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;124;03m    print(type(__name__)\u001b[39;00m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;124;03m    '''\u001b[39;00m\n\u001b[0;32m---> 39\u001b[0m     \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[2], line 30\u001b[0m, in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     27\u001b[0m weight \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m請輸入您的體重(kg)\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m     29\u001b[0m BMI \u001b[38;5;241m=\u001b[39m cal_bmi(height\u001b[38;5;241m=\u001b[39mheight, weight\u001b[38;5;241m=\u001b[39mweight)\n\u001b[0;32m---> 30\u001b[0m value \u001b[38;5;241m=\u001b[39m \u001b[43mget_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43mBMI\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m您的姓名是:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m您的BMI值是\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mBMI\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m您屬於\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvalue\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m範圍\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[2], line 12\u001b[0m, in \u001b[0;36mget_status\u001b[0;34m(bmi)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m bmi \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m18.5\u001b[39m: \n\u001b[1;32m     11\u001b[0m     value \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m過輕\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 12\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m bmi \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m18.5\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[43mBMI\u001b[49m \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m24\u001b[39m:\n\u001b[1;32m     13\u001b[0m     value \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m正常\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m bmi \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m27\u001b[39m:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'BMI' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#BMI值  6月2日程式碼 main(主程式)\n",
+    "\n",
+    "import pyinputplus as pypi\n",
+    "\n",
+    "def cal_bmi(height:int,weight:int) -> float:\n",
+    "    BMI = float(weight/(height/100)**2)\n",
+    "    return BMI\n",
+    "\n",
+    "def get_status(bmi:float)->str:\n",
+    "    if bmi < 18.5: \n",
+    "        value = \"過輕\"\n",
+    "    elif bmi > 18.5 and BMI < 24:\n",
+    "        value = \"正常\"\n",
+    "    elif bmi < 27:\n",
+    "        value = \"過重\"\n",
+    "    elif bmi < 30:\n",
+    "        value = \"輕度肥胖\"\n",
+    "    elif bmi < 35:\n",
+    "        value = \"中度肥胖\"\n",
+    "    else:\n",
+    "        value = \"重度肥胖\"\n",
+    "    return value\n",
+    "\n",
+    "def main()->None:\n",
+    "    name = input(\"請輸入您的姓名\") \n",
+    "    height = float(input(\"請輸入您的身高(cm)\"))\n",
+    "    weight = float(input(\"請輸入您的體重(kg)\"))\n",
+    "\n",
+    "    BMI = cal_bmi(height=height, weight=weight)\n",
+    "    value = get_status(BMI)\n",
+    "    print(f\"您的姓名是:{name}\\n您的BMI值是{BMI}\\n您屬於{value}範圍\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    '''\n",
+    "    print(\"我是被python執行的主程式\")\n",
+    "    print(__name__)\n",
+    "    print(type(__name__)\n",
+    "    '''\n",
+    "    main()\n"
    ]
   }
  ],
