--- a/lesson12/lesson12_1.ipynb
+++ b/lesson12/lesson12_1.ipynb
@@ -1054,6 +1054,32 @@
     "for item in data_list:\n",
     "    print(item)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers:list[int] = [1,2,3,4,5,6,7,8,9,10]\n",
+    "def is_even(num:int) -> bool:\n",
+    "    if num % 2 == 0:\n",
+    "        return True\n",
+    "    else:                  #這2行可省略不寫->None\n",
+    "        return False\n",
+    "list(filter(is_even,numbers))"
+   ]
   }
  ],
  "metadata": {
