--- a/lesson12/lesson12_1.ipynb
+++ b/lesson12/lesson12_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1045,6 +1045,16 @@
       "{'site_name': '湖口', 'county': '新竹縣', 'aqi': 45, 'status': '良好', 'pm25': 15.0}\n",
       "{'site_name': '龍潭', 'county': '桃園市', 'aqi': 44, 'status': '良好', 'pm25': 12.0}\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1052,7 +1062,9 @@
     "#aqies.model_dump_json()\n",
     "data_list:list[dict] = all_data[\"records\"]\n",
     "for item in data_list:\n",
-    "    print(item)"
+    "    print(item)\n",
+    "\n",
+    "len(data_list)"
    ]
   },
   {
@@ -1079,6 +1091,206 @@
     "    else:                  #這2行可省略不寫->None\n",
     "        return False\n",
     "list(filter(is_even,numbers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#if...else, 一行的寫法, 沒有:\n",
+    "1 if True else 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers:list[int] = [1,2,3,4,5,6,7,8,9,10]\n",
+    "def is_even(num:int) -> bool:\n",
+    "    return True if num % 2 == 0 else None\n",
+    " \n",
+    "list(filter(is_even,numbers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#lamda匿名函式\n",
+    "numbers:list[int] = [1,2,3,4,5,6,7,8,9,10]   \n",
+    "list(filter(lambda num:True if num % 2 == 0 else None,numbers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "987"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def myfunction(item:dict) ->bool:\n",
+    "    if item[\"pm25\"] == 0.0:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "    \n",
+    "filter_list:list[dict] = list(filter(myfunction,data_list))\n",
+    "len(filter_list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "987"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "filter_list:list[dict] = list(filter(lambda item:False if item[\"pm25\"] ==0 else True, data_list))\n",
+    "len(filter_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[19, 21, 31, 91, 92]\n",
+      "[92, 91, 31, 21, 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers:list[int] = [21, 19, 92, 31, 91]\n",
+    "#排序\n",
+    "print(sorted(numbers))\n",
+    "print(sorted(numbers, reverse=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'site_name': '馬公', 'county': '澎湖縣', 'aqi': 28, 'status': '良好', 'pm25': 1.0},\n",
+       " {'site_name': '馬公', 'county': '澎湖縣', 'aqi': 31, 'status': '良好', 'pm25': 1.0},\n",
+       " {'site_name': '陽明', 'county': '臺北市', 'aqi': 21, 'status': '良好', 'pm25': 1.0},\n",
+       " {'site_name': '基隆', 'county': '基隆市', 'aqi': 18, 'status': '良好', 'pm25': 1.0},\n",
+       " {'site_name': '馬公', 'county': '澎湖縣', 'aqi': 38, 'status': '良好', 'pm25': 1.0}]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sorted_function(item:dict):\n",
+    "    return item[\"pm25\"]\n",
+    "\n",
+    "sorted_pm25:list[dict] = sorted(filter_list,key=sorted_function)\n",
+    "sorted_pm25[0:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'site_name': '二林', 'county': '彰化縣', 'aqi': 69, 'status': '普通', 'pm25': 12.0},\n",
+       " {'site_name': '二林', 'county': '彰化縣', 'aqi': 71, 'status': '普通', 'pm25': 30.0},\n",
+       " {'site_name': '二林', 'county': '彰化縣', 'aqi': 74, 'status': '普通', 'pm25': 31.0},\n",
+       " {'site_name': '大城', 'county': '彰化縣', 'aqi': 77, 'status': '普通', 'pm25': 8.0},\n",
+       " {'site_name': '馬祖', 'county': '連江縣', 'aqi': 77, 'status': '普通', 'pm25': 8.0},\n",
+       " {'site_name': '二林', 'county': '彰化縣', 'aqi': 78, 'status': '普通', 'pm25': 21.0},\n",
+       " {'site_name': '二林', 'county': '彰化縣', 'aqi': 80, 'status': '普通', 'pm25': 36.0},\n",
+       " {'site_name': '二林', 'county': '彰化縣', 'aqi': 81, 'status': '普通', 'pm25': 23.0},\n",
+       " {'site_name': '二林', 'county': '彰化縣', 'aqi': 83, 'status': '普通', 'pm25': 29.0},\n",
+       " {'site_name': '朴子',\n",
+       "  'county': '嘉義縣',\n",
+       "  'aqi': 106,\n",
+       "  'status': '對敏感族群不健康',\n",
+       "  'pm25': 9.0}]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_aqi:list[dict] = sorted(filter_list,key=lambda item:item[\"aqi\"])\n",
+    "sorted_aqi[0:10]\n",
+    "sorted_aqi[-10:]"
    ]
   }
  ],
