--- a/lesson15/lesson15_5.ipynb
+++ b/lesson15/lesson15_5.ipynb
@@ -509,10 +509,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 63,  97,  93,  53,  83],\n",
+       "       [ 50,  64,  63,  93,  99],\n",
+       "       [ 78,  61,  64,  53,  58],\n",
+       "       [ 50,  79,  65,  89,  97],\n",
+       "       [ 86,  83,  92,  79,  57],\n",
+       "       [ 86,  85,  97,  80,  62],\n",
+       "       [100,  94,  56,  57,  81],\n",
+       "       [ 78,  92,  78,  93,  94],\n",
+       "       [ 90,  85,  55,  98,  61],\n",
+       "       [ 58,  95,  55,  72,  65],\n",
+       "       [ 64,  63,  67,  57,  75],\n",
+       "       [ 78,  95,  92,  70,  77],\n",
+       "       [100,  86,  64,  89,  75],\n",
+       "       [ 81,  83,  67,  85,  85],\n",
+       "       [ 90,  56,  96,  96,  50],\n",
+       "       [ 69,  57,  63,  75,  99],\n",
+       "       [ 61,  86,  66,  52,  76],\n",
+       "       [ 50, 100,  57,  89,  66],\n",
+       "       [ 69,  78,  87,  64,  57],\n",
+       "       [ 51,  79,  95,  50,  79],\n",
+       "       [ 68,  63,  55,  77,  65],\n",
+       "       [ 79,  90,  52,  58,  64],\n",
+       "       [ 78,  58,  98,  69,  50],\n",
+       "       [ 58,  67,  55,  74,  90],\n",
+       "       [ 72,  94,  81,  79,  89],\n",
+       "       [ 63, 100,  97,  55,  76],\n",
+       "       [ 66,  51,  56,  86,  79],\n",
+       "       [ 85,  87,  71,  53,  57],\n",
+       "       [ 69,  70,  51,  51,  64],\n",
+       "       [ 74,  67,  94,  94,  90],\n",
+       "       [ 59,  89,  53,  56,  75],\n",
+       "       [100,  68,  96,  70,  64],\n",
+       "       [ 95,  50,  54,  52,  97],\n",
+       "       [ 71,  53,  97,  61,  74],\n",
+       "       [ 54,  93,  74,  85,  66],\n",
+       "       [ 92,  92,  96,  75,  61],\n",
+       "       [ 58,  51,  86,  96,  87],\n",
+       "       [ 92,  58,  83,  94,  60],\n",
+       "       [ 84,  97,  94,  88,  62],\n",
+       "       [ 89,  93,  71,  80,  75],\n",
+       "       [ 69,  58,  94,  63,  60],\n",
+       "       [ 86,  55,  66,  87,  83],\n",
+       "       [ 58,  54,  89,  93,  59],\n",
+       "       [ 99,  70,  87,  56,  57],\n",
+       "       [ 75,  92,  62,  74,  62],\n",
+       "       [ 81,  78,  74,  77,  81],\n",
+       "       [ 89,  89,  50,  72,  77],\n",
+       "       [ 93,  68,  98,  54,  84],\n",
+       "       [ 76,  50,  55,  85,  81],\n",
+       "       [ 86,  75,  88,  94,  88]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stu.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 63,  97,  93,  53,  83],\n",
+       "       [ 50,  64,  63,  93,  99],\n",
+       "       [ 78,  61,  64,  53,  58],\n",
+       "       [ 50,  79,  65,  89,  97],\n",
+       "       [ 86,  83,  92,  79,  57],\n",
+       "       [ 86,  85,  97,  80,  62],\n",
+       "       [100,  94,  56,  57,  81],\n",
+       "       [ 78,  92,  78,  93,  94],\n",
+       "       [ 90,  85,  55,  98,  61],\n",
+       "       [ 58,  95,  55,  72,  65],\n",
+       "       [ 64,  63,  67,  57,  75],\n",
+       "       [ 78,  95,  92,  70,  77],\n",
+       "       [100,  86,  64,  89,  75],\n",
+       "       [ 81,  83,  67,  85,  85],\n",
+       "       [ 90,  56,  96,  96,  50],\n",
+       "       [ 69,  57,  63,  75,  99],\n",
+       "       [ 61,  86,  66,  52,  76],\n",
+       "       [ 50, 100,  57,  89,  66],\n",
+       "       [ 69,  78,  87,  64,  57],\n",
+       "       [ 51,  79,  95,  50,  79],\n",
+       "       [ 68,  63,  55,  77,  65],\n",
+       "       [ 79,  90,  52,  58,  64],\n",
+       "       [ 78,  58,  98,  69,  50],\n",
+       "       [ 58,  67,  55,  74,  90],\n",
+       "       [ 72,  94,  81,  79,  89],\n",
+       "       [ 63, 100,  97,  55,  76],\n",
+       "       [ 66,  51,  56,  86,  79],\n",
+       "       [ 85,  87,  71,  53,  57],\n",
+       "       [ 69,  70,  51,  51,  64],\n",
+       "       [ 74,  67,  94,  94,  90],\n",
+       "       [ 59,  89,  53,  56,  75],\n",
+       "       [100,  68,  96,  70,  64],\n",
+       "       [ 95,  50,  54,  52,  97],\n",
+       "       [ 71,  53,  97,  61,  74],\n",
+       "       [ 54,  93,  74,  85,  66],\n",
+       "       [ 92,  92,  96,  75,  61],\n",
+       "       [ 58,  51,  86,  96,  87],\n",
+       "       [ 92,  58,  83,  94,  60],\n",
+       "       [ 84,  97,  94,  88,  62],\n",
+       "       [ 89,  93,  71,  80,  75],\n",
+       "       [ 69,  58,  94,  63,  60],\n",
+       "       [ 86,  55,  66,  87,  83],\n",
+       "       [ 58,  54,  89,  93,  59],\n",
+       "       [ 99,  70,  87,  56,  57],\n",
+       "       [ 75,  92,  62,  74,  62],\n",
+       "       [ 81,  78,  74,  77,  81],\n",
+       "       [ 89,  89,  50,  72,  77],\n",
+       "       [ 93,  68,  98,  54,  84],\n",
+       "       [ 76,  50,  55,  85,  81],\n",
+       "       [ 86,  75,  88,  94,  88]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stu.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[63, 97, 93, 53, 83],\n",
+       " [50, 64, 63, 93, 99],\n",
+       " [78, 61, 64, 53, 58],\n",
+       " [50, 79, 65, 89, 97],\n",
+       " [86, 83, 92, 79, 57],\n",
+       " [86, 85, 97, 80, 62],\n",
+       " [100, 94, 56, 57, 81],\n",
+       " [78, 92, 78, 93, 94],\n",
+       " [90, 85, 55, 98, 61],\n",
+       " [58, 95, 55, 72, 65],\n",
+       " [64, 63, 67, 57, 75],\n",
+       " [78, 95, 92, 70, 77],\n",
+       " [100, 86, 64, 89, 75],\n",
+       " [81, 83, 67, 85, 85],\n",
+       " [90, 56, 96, 96, 50],\n",
+       " [69, 57, 63, 75, 99],\n",
+       " [61, 86, 66, 52, 76],\n",
+       " [50, 100, 57, 89, 66],\n",
+       " [69, 78, 87, 64, 57],\n",
+       " [51, 79, 95, 50, 79],\n",
+       " [68, 63, 55, 77, 65],\n",
+       " [79, 90, 52, 58, 64],\n",
+       " [78, 58, 98, 69, 50],\n",
+       " [58, 67, 55, 74, 90],\n",
+       " [72, 94, 81, 79, 89],\n",
+       " [63, 100, 97, 55, 76],\n",
+       " [66, 51, 56, 86, 79],\n",
+       " [85, 87, 71, 53, 57],\n",
+       " [69, 70, 51, 51, 64],\n",
+       " [74, 67, 94, 94, 90],\n",
+       " [59, 89, 53, 56, 75],\n",
+       " [100, 68, 96, 70, 64],\n",
+       " [95, 50, 54, 52, 97],\n",
+       " [71, 53, 97, 61, 74],\n",
+       " [54, 93, 74, 85, 66],\n",
+       " [92, 92, 96, 75, 61],\n",
+       " [58, 51, 86, 96, 87],\n",
+       " [92, 58, 83, 94, 60],\n",
+       " [84, 97, 94, 88, 62],\n",
+       " [89, 93, 71, 80, 75],\n",
+       " [69, 58, 94, 63, 60],\n",
+       " [86, 55, 66, 87, 83],\n",
+       " [58, 54, 89, 93, 59],\n",
+       " [99, 70, 87, 56, 57],\n",
+       " [75, 92, 62, 74, 62],\n",
+       " [81, 78, 74, 77, 81],\n",
+       " [89, 89, 50, 72, 77],\n",
+       " [93, 68, 98, 54, 84],\n",
+       " [76, 50, 55, 85, 81],\n",
+       " [86, 75, 88, 94, 88]]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stu.to_numpy().tolist()"
+   ]
   }
  ],
  "metadata": {
