--- a/lesson15/lesson15_6.ipynb
+++ b/lesson15/lesson15_6.ipynb
@@ -645,6 +645,175 @@
    "source": [
     "chinese_series[:5] #國文前5個學生的分數"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>國文</th>\n",
+       "      <th>英語</th>\n",
+       "      <th>數學</th>\n",
+       "      <th>地理</th>\n",
+       "      <th>歷史</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>第1號</th>\n",
+       "      <td>58</td>\n",
+       "      <td>72</td>\n",
+       "      <td>97</td>\n",
+       "      <td>86</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第2號</th>\n",
+       "      <td>62</td>\n",
+       "      <td>82</td>\n",
+       "      <td>77</td>\n",
+       "      <td>98</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     國文  英語  數學  地理  歷史\n",
+       "第1號  58  72  97  86  79\n",
+       "第2號  62  82  77  98  74"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#第一和第二號學生\n",
+    "stu.loc[[\"第1號\",\"第2號\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>國文</th>\n",
+       "      <th>英語</th>\n",
+       "      <th>數學</th>\n",
+       "      <th>地理</th>\n",
+       "      <th>歷史</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>第46號</th>\n",
+       "      <td>88</td>\n",
+       "      <td>87</td>\n",
+       "      <td>54</td>\n",
+       "      <td>91</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第47號</th>\n",
+       "      <td>69</td>\n",
+       "      <td>54</td>\n",
+       "      <td>54</td>\n",
+       "      <td>70</td>\n",
+       "      <td>56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第48號</th>\n",
+       "      <td>55</td>\n",
+       "      <td>64</td>\n",
+       "      <td>64</td>\n",
+       "      <td>59</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第49號</th>\n",
+       "      <td>55</td>\n",
+       "      <td>97</td>\n",
+       "      <td>86</td>\n",
+       "      <td>93</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第50號</th>\n",
+       "      <td>86</td>\n",
+       "      <td>64</td>\n",
+       "      <td>80</td>\n",
+       "      <td>67</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      國文  英語  數學  地理  歷史\n",
+       "第46號  88  87  54  91  68\n",
+       "第47號  69  54  54  70  56\n",
+       "第48號  55  64  64  59  64\n",
+       "第49號  55  97  86  93  85\n",
+       "第50號  86  64  80  67  74"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#前5個學生\n",
+    "stu.iloc[:5]\n",
+    "#後5個學生\n",
+    "stu.iloc[-5:]"
+   ]
   }
  ],
  "metadata": {
