--- a/lesson13/lesson13_0.ipynb
+++ b/lesson13/lesson13_0.ipynb
@@ -16,9 +16,9 @@
    "source": [
     "import requests\n",
     "from requests import Response\n",
-    "youbike = \"https://tcgbusfs.blob.core.windows.net/dotapp/youbike/v2/youbike_immediate.json\"\n",
+    "youbike = 'https://tcgbusfs.blob.core.windows.net/dotapp/youbike/v2/youbike_immediate.json'\n",
     "try:\n",
-    "    res:Response = requests.request(\"GET\", youbike)\n",
+    "    res:Response = requests.request('GET',youbike)\n",
     "    res.raise_for_status()\n",
     "except Exception:\n",
     "    print(\"連線出問題\")\n",
