--- a/lesson16/lesson16_3.ipynb
+++ b/lesson16/lesson16_3.ipynb
@@ -920,6 +920,99 @@
     "df6 = df5.set_index(\"區域別\")\n",
     "df6"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 370 entries, 新北市板橋區 to 南沙群島\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   年底人口數   370 non-null    object\n",
+      " 1   土地面積    370 non-null    object\n",
+      " 2   人口密度    370 non-null    object\n",
+      "dtypes: object(3)\n",
+      "memory usage: 11.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df6.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "區域別\n",
+       "新北市板橋區    23.1373\n",
+       "新北市三重區    16.3170\n",
+       "新北市中和區    20.1440\n",
+       "新北市永和區     5.7138\n",
+       "新北市新莊區    19.7383\n",
+       "           ...   \n",
+       "連江縣北竿鄉     9.9000\n",
+       "連江縣莒光鄉     4.7000\n",
+       "連江縣東引鄉     3.8000\n",
+       "東沙群島       2.3800\n",
+       "南沙群島       0.5045\n",
+       "Name: 土地面積, Length: 370, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df6[\"土地面積\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df6['土地面積'] = df6['土地面積'].astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 370 entries, 新北市板橋區 to 南沙群島\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   年底人口數   370 non-null    object \n",
+      " 1   土地面積    370 non-null    float64\n",
+      " 2   人口密度    370 non-null    object \n",
+      "dtypes: float64(1), object(2)\n",
+      "memory usage: 19.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df6.info()"
+   ]
   }
  ],
  "metadata": {
