--- a/lesson17/lesson17_1.ipynb
+++ b/lesson17/lesson17_1.ipynb
@@ -2621,6 +2621,249 @@
     "sorted_df[\"排名\"] = sorted_df[\"平均\"].rank(ascending=False,method=\"first\")\n",
     "sorted_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>國文</th>\n",
+       "      <th>英文</th>\n",
+       "      <th>數學</th>\n",
+       "      <th>地理</th>\n",
+       "      <th>歷史</th>\n",
+       "      <th>總分</th>\n",
+       "      <th>平均</th>\n",
+       "      <th>排名</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>第46號</th>\n",
+       "      <td>54</td>\n",
+       "      <td>95</td>\n",
+       "      <td>97</td>\n",
+       "      <td>79</td>\n",
+       "      <td>87</td>\n",
+       "      <td>412</td>\n",
+       "      <td>82.4</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第49號</th>\n",
+       "      <td>58</td>\n",
+       "      <td>84</td>\n",
+       "      <td>99</td>\n",
+       "      <td>82</td>\n",
+       "      <td>80</td>\n",
+       "      <td>403</td>\n",
+       "      <td>80.6</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第13號</th>\n",
+       "      <td>55</td>\n",
+       "      <td>84</td>\n",
+       "      <td>86</td>\n",
+       "      <td>69</td>\n",
+       "      <td>92</td>\n",
+       "      <td>386</td>\n",
+       "      <td>77.2</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第21號</th>\n",
+       "      <td>58</td>\n",
+       "      <td>97</td>\n",
+       "      <td>81</td>\n",
+       "      <td>52</td>\n",
+       "      <td>85</td>\n",
+       "      <td>373</td>\n",
+       "      <td>74.6</td>\n",
+       "      <td>28.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第15號</th>\n",
+       "      <td>57</td>\n",
+       "      <td>76</td>\n",
+       "      <td>86</td>\n",
+       "      <td>92</td>\n",
+       "      <td>59</td>\n",
+       "      <td>370</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>29.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第10號</th>\n",
+       "      <td>56</td>\n",
+       "      <td>100</td>\n",
+       "      <td>62</td>\n",
+       "      <td>66</td>\n",
+       "      <td>78</td>\n",
+       "      <td>362</td>\n",
+       "      <td>72.4</td>\n",
+       "      <td>34.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第1號</th>\n",
+       "      <td>55</td>\n",
+       "      <td>62</td>\n",
+       "      <td>90</td>\n",
+       "      <td>98</td>\n",
+       "      <td>55</td>\n",
+       "      <td>360</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>36.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第48號</th>\n",
+       "      <td>54</td>\n",
+       "      <td>86</td>\n",
+       "      <td>58</td>\n",
+       "      <td>99</td>\n",
+       "      <td>56</td>\n",
+       "      <td>353</td>\n",
+       "      <td>70.6</td>\n",
+       "      <td>38.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第37號</th>\n",
+       "      <td>50</td>\n",
+       "      <td>55</td>\n",
+       "      <td>74</td>\n",
+       "      <td>98</td>\n",
+       "      <td>73</td>\n",
+       "      <td>350</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第16號</th>\n",
+       "      <td>57</td>\n",
+       "      <td>78</td>\n",
+       "      <td>54</td>\n",
+       "      <td>75</td>\n",
+       "      <td>83</td>\n",
+       "      <td>347</td>\n",
+       "      <td>69.4</td>\n",
+       "      <td>42.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第30號</th>\n",
+       "      <td>53</td>\n",
+       "      <td>57</td>\n",
+       "      <td>76</td>\n",
+       "      <td>52</td>\n",
+       "      <td>95</td>\n",
+       "      <td>333</td>\n",
+       "      <td>66.6</td>\n",
+       "      <td>46.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第41號</th>\n",
+       "      <td>51</td>\n",
+       "      <td>88</td>\n",
+       "      <td>61</td>\n",
+       "      <td>56</td>\n",
+       "      <td>73</td>\n",
+       "      <td>329</td>\n",
+       "      <td>65.8</td>\n",
+       "      <td>47.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第18號</th>\n",
+       "      <td>57</td>\n",
+       "      <td>85</td>\n",
+       "      <td>67</td>\n",
+       "      <td>67</td>\n",
+       "      <td>50</td>\n",
+       "      <td>326</td>\n",
+       "      <td>65.2</td>\n",
+       "      <td>49.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      國文   英文  數學  地理  歷史   總分    平均    排名\n",
+       "第46號  54   95  97  79  87  412  82.4   7.0\n",
+       "第49號  58   84  99  82  80  403  80.6   9.0\n",
+       "第13號  55   84  86  69  92  386  77.2  22.0\n",
+       "第21號  58   97  81  52  85  373  74.6  28.0\n",
+       "第15號  57   76  86  92  59  370  74.0  29.0\n",
+       "第10號  56  100  62  66  78  362  72.4  34.0\n",
+       "第1號   55   62  90  98  55  360  72.0  36.0\n",
+       "第48號  54   86  58  99  56  353  70.6  38.0\n",
+       "第37號  50   55  74  98  73  350  70.0  40.0\n",
+       "第16號  57   78  54  75  83  347  69.4  42.0\n",
+       "第30號  53   57  76  52  95  333  66.6  46.0\n",
+       "第41號  51   88  61  56  73  329  65.8  47.0\n",
+       "第18號  57   85  67  67  50  326  65.2  49.0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#國文不及格的\n",
+    "sorted_df[sorted_df[\"國文\"] < 60]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#使用subscript, 搜尋國文及格同時英文及格\n",
+    "sorted_df[(sorted_df[\"國文\"] >= 60) & (sorted_df[\"英文\"] >= 60)]\n",
+    "import numpy as np\n",
+    "sorted_df[(sorted_df[\"國文\"] >= 60) & (sorted_df[\"英文\"] >= 60)].shape[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#"
+   ]
   }
  ],
  "metadata": {
