--- a/lesson18/lesson18_3.ipynb
+++ b/lesson18/lesson18_3.ipynb
@@ -899,6 +899,157 @@
     "df6 = df5.map(add_percentage)\n",
     "df6"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>台積電</th>\n",
+       "      <th>聯電</th>\n",
+       "      <th>聯發科</th>\n",
+       "      <th>鴻海</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2001-07-24</th>\n",
+       "      <td>-0.173113</td>\n",
+       "      <td>-0.033921</td>\n",
+       "      <td>1.829315</td>\n",
+       "      <td>-0.312100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-07-25</th>\n",
+       "      <td>0.519005</td>\n",
+       "      <td>0.305302</td>\n",
+       "      <td>2.120394</td>\n",
+       "      <td>0.416827</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-07-26</th>\n",
+       "      <td>0.519024</td>\n",
+       "      <td>0.339226</td>\n",
+       "      <td>2.213440</td>\n",
+       "      <td>0.519485</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-07-27</th>\n",
+       "      <td>1.038019</td>\n",
+       "      <td>0.271381</td>\n",
+       "      <td>-0.096905</td>\n",
+       "      <td>-0.312101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-07-30</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-06-24</th>\n",
+       "      <td>-30.000000</td>\n",
+       "      <td>-0.900002</td>\n",
+       "      <td>-80.000000</td>\n",
+       "      <td>-6.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-06-25</th>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>-0.399998</td>\n",
+       "      <td>-25.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-06-26</th>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>0.199997</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-06-27</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.199997</td>\n",
+       "      <td>-10.000000</td>\n",
+       "      <td>2.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-06-28</th>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>-0.700001</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>1.500000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5697 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  台積電        聯電        聯發科        鴻海\n",
+       "Date                                                \n",
+       "2001-07-24  -0.173113 -0.033921   1.829315 -0.312100\n",
+       "2001-07-25   0.519005  0.305302   2.120394  0.416827\n",
+       "2001-07-26   0.519024  0.339226   2.213440  0.519485\n",
+       "2001-07-27   1.038019  0.271381  -0.096905 -0.312101\n",
+       "2001-07-30   0.000000  0.000000   0.000000  0.000000\n",
+       "...               ...       ...        ...       ...\n",
+       "2024-06-24 -30.000000 -0.900002 -80.000000 -6.000000\n",
+       "2024-06-25   5.000000 -0.399998 -25.000000  5.000000\n",
+       "2024-06-26  15.000000  0.199997  20.000000 -1.000000\n",
+       "2024-06-27   0.000000 -0.199997 -10.000000  2.500000\n",
+       "2024-06-28   6.000000 -0.700001   5.000000  1.500000\n",
+       "\n",
+       "[5697 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df7 = df3 - df3.shift(1)\n",
+    "df8 = df7.dropna()\n",
+    "df8\n"
+   ]
   }
  ],
  "metadata": {
