--- a/lesson19/lesson19_1.ipynb
+++ b/lesson19/lesson19_1.ipynb
@@ -291,7 +291,7 @@
     }
    ],
    "source": [
-    "result_df = pd.merge(df2,stations_name1,left_on=\"車站代碼\",right_on=\"編碼\",how=\"left\")\n",
+    "result_df = pd.merge(df2,stations_name1,left_on='車站代碼',right_on='編碼',how='left')\n",
     "result_df"
    ]
   },
