--- a/lesson19/lesson19_2.ipynb
+++ b/lesson19/lesson19_2.ipynb
@@ -242,7 +242,38 @@
     "\n",
     "\"每日各站進出站人數\"\n",
     "dataFolder_path = os.path.join(main_path,\"每日各站進出站人數\")   #取得放資料的目錄\n",
-    "os.listdir(dataFolder_path)    #取得資料目錄的當案名稱"
+    "filenames = os.listdir(dataFolder_path)    #取得資料目錄的當案名稱\n",
+    "for filename in filenames:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/workspaces/2024_Python-class/lesson19/每日各站進出站人數/每日各站進出站人數2020.csv\n",
+      "/workspaces/2024_Python-class/lesson19/每日各站進出站人數/每日各站進出站人數2021.csv\n",
+      "/workspaces/2024_Python-class/lesson19/每日各站進出站人數/每日各站進出站人數20190423-20191231.csv\n",
+      "/workspaces/2024_Python-class/lesson19/每日各站進出站人數/每日各站進出站人數2023.csv\n",
+      "/workspaces/2024_Python-class/lesson19/每日各站進出站人數/每日各站進出站人數2022.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "current_path = os.path.abspath(__name__)     #目前執行檔案的絕對路徑\n",
+    "main_path = os.path.dirname(current_path)    #取得目前執行檔案的目錄的絕對路徑\n",
+    "\n",
+    "\"每日各站進出站人數\"\n",
+    "dataFolder_path = os.path.join(main_path,\"每日各站進出站人數\")   #取得放資料的目錄\n",
+    "filenames = os.listdir(dataFolder_path)    #取得資料目錄的當案名稱\n",
+    "names = list(filter(lambda name: \"每日各站進出站人數\" in name, filenames))   #注意: lambda敘述只能一行\n",
+    "for name in names:\n",
+    "    print(os.path.join(dataFolder_path,name))"
    ]
   }
  ],
