--- a/lesson20/lesson20_2.ipynb
+++ b/lesson20/lesson20_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "2019-04-23   瑞和     7     9"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "[239 rows x 3 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
        "[477 rows x 3 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +589,7 @@
        "[406761 rows x 2 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
        "Length: 813522, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1031,13 +1031,110 @@
        "[3428 rows x 241 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "s1.unstack(level = \"車站名稱\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "日期          車站名稱  人數  \n",
+       "2019-04-23  基隆    進站人數    8442\n",
+       "                  出站人數    7743\n",
+       "            鎮安    進站人數      15\n",
+       "                  出站人數      14\n",
+       "            林邊    進站人數     368\n",
+       "                          ... \n",
+       "2023-12-31  花壇    出站人數    1532\n",
+       "            潭子    進站人數    3517\n",
+       "                  出站人數    3091\n",
+       "            瑞穗    進站人數     811\n",
+       "                  出站人數    1053\n",
+       "Length: 813522, dtype: int64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "日期          車站名稱  人數  \n",
+       "2019-04-23  基隆    進站人數    8442\n",
+       "                  出站人數    7743\n",
+       "            鎮安    進站人數      15\n",
+       "                  出站人數      14\n",
+       "            林邊    進站人數     368\n",
+       "                          ... \n",
+       "2019-04-24  精武    出站人數     971\n",
+       "            太原    進站人數    3056\n",
+       "                  出站人數    3112\n",
+       "            烏日    進站人數     754\n",
+       "                  出站人數     799\n",
+       "Length: 954, dtype: int64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s2 = s1[\"2019-04-23\":\"2019-04-24\"]\n",
+    "s2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "車站名稱  人數  \n",
+       "七堵    出站人數    12706\n",
+       "      進站人數    12252\n",
+       "三坑    出站人數     2841\n",
+       "      進站人數     2826\n",
+       "三塊厝   出站人數      796\n",
+       "              ...  \n",
+       "龍泉    進站人數       16\n",
+       "龍港    出站人數       40\n",
+       "      進站人數       42\n",
+       "龜山    出站人數      198\n",
+       "      進站人數      173\n",
+       "Length: 478, dtype: int64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s2.groupby(level=[\"車站名稱\",\"人數\"]).sum()"
    ]
   }
  ],
